@@ -1202,6 +1202,9 @@ processBootOptions()
 		return -1;
 	}
 
+	// Find out which version mac os we're booting.
+	strncpy(gMacOSVersion, gBootVolume->OSVersion, sizeof(gMacOSVersion));
+
 	// Load config table specified by the user, or use the default.
 
 	if (!getValueForBootKey(cp, "config", &val, &cnt)) {
